update Change password

--- a/web/geoTest/article.html
+++ b/web/geoTest/article.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Java Servlet JSON</title>
     <!-- bootstrap just to have good looking page -->
-    <link href="bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet" />
+    <link href="../bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- we code these -->
-    <script src="js/myfunctions.js"></script>
+    <script src="../js/myfunctions.js"></script>
 
 </head>
 
