--- a/web/userSites/profile.html
+++ b/web/userSites/profile.html
@@ -1,24 +1,21 @@
-<!DOCTYPE html>
 <html>
 <head>
-    <title>Order Form</title>
+    <title>My Profile</title>
     <link rel="shortcut icon" type="image/png" href="/icon/flame.png">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="../css/home.css">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
-    <!--<script src="js/popper.min.js"></script>-->
 
     <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="../css/app.css">
 </head>
 
 <body>
-
 
 <nav class="navbar navbar-inverse">
     <div class="container">
@@ -37,38 +34,41 @@
             </div>
         </div>
         <!--end userTab  -->
-
-        <!--login & sign up-->
-        <div id="logSign" class="form-inline ml-auto" style="float: right;margin-top: 8px;">
-            <a href="/login" class="btn btn-outline-secondary" style="color: white;">Sign in</a>
-            <a href="/signup" class="btn btn-primary ml-2">Sign up</a>
-        </div>
-        <!--end logSign-->
     </div>
     </div>
 </nav>
 
 <script type="text/javascript">
-    $(function () {
-        var name = $.cookie('username');
-        if(name)
-        {
-            $('#userBtn').text(name);
-            $('#logSign').hide();
-            $('#userTab').show();
+    var name = $.cookie('username');
+    $('#userBtn').text(name);
+</script>
+<br /><br /><br />
+
+<div>
+    <h5>Name: </h5><span id="name"></span>
+    <h5>Phone Number: </h5><span id="phoneNumber"></span>
+    <h5>Email: </h5><span id="email"></span>
+    <h5>Point: </h5> <span id="point"></span><br/>
+    <a href="/changePassword">Change password</a>
+</div>
+<script>
+
+    $.ajax({
+        url: '/profile',
+        type: 'POST',
+        success: function (data) {
+            if(data.status){
+                $('#name').html(data.name);
+                $('#phoneNumber').html(data.phoneNumber);
+                $('#email').html(data.email);
+                $('#point').html(data.point);
+            }
+            else {
+                window.alert('Can not get the data');
+            }
         }
-        else {
-            $('#logSign').show();
-            $('#userTab').hide();
-        }
-    })
+    });
 
 </script>
-
-<br><br><br>
-
-<h2>Thank you. Our honor to serve you.</h2>
-<h3>We'll call you to confirm the delivery address once again.</h3>
-
 </body>
 </html>
