--- a/web/orderSites/orderHistory.html
+++ b/web/orderSites/orderHistory.html
@@ -15,7 +15,7 @@
     <!--<script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap.min.js"></script>-->
 
 
-    <link rel="stylesheet" href="css/accounts.css">
+    <link rel="stylesheet" href="../css/accounts.css">
 
     <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
