--- a/web/orderSites/receivedOrder.html
+++ b/web/orderSites/receivedOrder.html
@@ -1,21 +1,24 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <title>My Profile</title>
+    <title>Order Form</title>
     <link rel="shortcut icon" type="image/png" href="/icon/flame.png">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="../css/home.css">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+    <!--<script src="js/popper.min.js"></script>-->
 
     <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="../css/app.css">
 </head>
 
 <body>
+
 
 <nav class="navbar navbar-inverse">
     <div class="container">
@@ -27,7 +30,7 @@
             dropdown" style="float: right;margin-top: 8px;">
                 <button id="userBtn" class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" style="width: 160px;"><span class="caret"></span></button>
                 <ul class="dropdown-menu">
-                    <li><a href="/myAccount">My account</a></li>
+                    <li><a href="/profile">My account</a></li>
                     <li><a href="/orderHistory">My order history</a></li>
                     <li><a href="/logout">Log out</a></li>
                 </ul>
@@ -61,16 +64,11 @@
     })
 
 </script>
-<br /><br /><br />
 
-<div>
-    <p>Name: </p><br />
-    <p>Phone Number: </p>
-    <p>Email: </p>
-    <p>Point: </p>
-    <p href="/changePassword">Change password</p>
+<br><br><br>
 
-</div>
+<h2>Thank you. Our honor to serve you.</h2>
+<h3>We'll call you to confirm the delivery address once again.</h3>
 
 </body>
 </html>
