--- a/web/userSites/signup.html
+++ b/web/userSites/signup.html
@@ -2,7 +2,7 @@
 <head>
     <title>Sign Up</title>
     <link rel="shortcut icon" type="image/png" href="/icon/flame.png">
-    <link rel="stylesheet" href="css/accounts.css">
+    <link rel="stylesheet" href="../css/accounts.css">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
