update Change Password

--- a/web/userSites/changePassword.html
+++ b/web/userSites/changePassword.html
@@ -133,7 +133,7 @@
 
         $.ajax(
             {
-                url : '/changePassword',
+                url : '/profile/changePassword',
                 type : 'POST',
                 dataType : 'json',
                 data : JSON.stringify(passwords),
