--- a/web/userSites/profile.html
+++ b/web/userSites/profile.html
@@ -49,7 +49,7 @@
     <h5>Phone Number: </h5><span id="phoneNumber"></span>
     <h5>Email: </h5><span id="email"></span>
     <h5>Point: </h5> <span id="point"></span><br/>
-    <a href="/changePassword">Change password</a>
+    <a href="/profile/changePassword">Change password</a>
 </div>
 <script>
 
