add abouts, products, tips

--- a/web/index.html
+++ b/web/index.html
@@ -68,7 +68,7 @@
   <a href="/orderForm">Order Gas Now</a><br />
   <a href="/products">Products</a><br />
   <a href="/tips">Tips for using</a><br />
-  <a href="/about">About</a><br />
+  <a href="/abouts">Abouts</a><br />
 
 
   </body>
