--- a/web/userSites/profile.html
+++ b/web/userSites/profile.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>My Profile</title>
@@ -13,6 +14,50 @@
     <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
 
     <link rel="stylesheet" href="../css/app.css">
+
+    <script>
+
+        $.ajax({
+            url: '/profile',
+            type: 'POST',
+            success: function (data) {
+                if(data.status){
+                    $('#name').html(data.name);
+                    $('#phoneNumber').html(data.phoneNumber);
+                    $('#email').html(data.email);
+                    $('#point').html(data.point);
+                }
+                else {
+                    window.alert('Can not get the data');
+                }
+            }
+        });
+
+        function changePhone() {
+            var data = new Object();
+            data.password = $('#password').val();
+            data.newPhoneNumber = $('#newPhoneNumber').val();
+
+            $.ajax({
+                url : '/profile/changePhoneNumber',
+                type: 'POST',
+                dataType: 'json',
+                data: JSON.stringify(data),
+                contentType: 'application/json; charset=UTF-8',
+                success: function (mess) {
+                    if(mess.status){
+                        $('#close1').click();
+                        window.alert('Successful');
+                        $('#phoneNumber').html(data.newPhoneNumber);
+                    }
+                    else {
+                        window.alert('Wrong Password !!!')
+                    }
+                }
+            });
+        }
+
+    </script>
 </head>
 
 <body>
@@ -46,29 +91,83 @@
 
 <div>
     <h5>Name: </h5><span id="name"></span>
-    <h5>Phone Number: </h5><span id="phoneNumber"></span>
+    <h5>Phone Number: </h5><div id="phoneNumber"></div>
+
+    <!-- Button trigger modal -->
+    <button id="change_phone_modal" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+        Change Phone Number
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Change phone number</h4>
+                </div>
+                <div class="modal-body">
+
+                    <div class="input-group">
+                        <span class="input-group-addon" id="basic-addon1">Password</span>
+                        <input id="password" type="password" class="form-control" placeholder="Enter password to confirm" aria-describedby="basic-addon1">
+                    </div>
+                    <br />
+                    <div class="input-group">
+                        <span class="input-group-addon" id="basic-addon2">Phone Number</span>
+                        <input id="newPhoneNumber" type="text" class="form-control" placeholder="Phone Number" aria-describedby="basic-addon1">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button id="close1" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button id="change_phone_btn" type="button" class="btn btn-primary" onclick="changePhone()">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <h5>Email: </h5><span id="email"></span>
     <h5>Point: </h5> <span id="point"></span><br/>
-    <a href="/profile/changePassword">Change password</a>
+    <!--<a href="/profile/changePassword">Change password</a>-->
+
+    <button id="change_pass_modal" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal1">
+        Change Password
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel1">Change Password</h4>
+                </div>
+                <div class="modal-body">
+
+                    <div class="input-group">
+                        <span class="input-group-addon" id="basic-addon3">@</span>
+                        <input id="oldPassword" type="password" class="form-control" placeholder="Current password" aria-describedby="basic-addon1">
+                    </div>
+                    <br />
+                    <div class="input-group">
+                        <span class="input-group-addon" id="basic-addon4">#</span>
+                        <input id="newPassword1" type="password" class="form-control" placeholder="New password" aria-describedby="basic-addon1">
+                    </div>
+                    <br />
+                    <div class="input-group">
+                        <span class="input-group-addon" id="basic-addon5">#</span>
+                        <input id="newPassword2" type="password" class="form-control" placeholder="Confirm new password" aria-describedby="basic-addon1">
+                    </div>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button id="change_pass_btn" type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
-<script>
-
-    $.ajax({
-        url: '/profile',
-        type: 'POST',
-        success: function (data) {
-            if(data.status){
-                $('#name').html(data.name);
-                $('#phoneNumber').html(data.phoneNumber);
-                $('#email').html(data.email);
-                $('#point').html(data.point);
-            }
-            else {
-                window.alert('Can not get the data');
-            }
-        }
-    });
-
-</script>
 </body>
 </html>
