--- a/web/userSites/signup.html
+++ b/web/userSites/signup.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>Sign Up</title>
@@ -167,7 +168,7 @@
         user.lastName = $('#lastName').val();
         user.username = $('#username').val();
         user.password = $('#password').val();
-        user.password1 = $('#password1').val();
+        // user.password1 = $('#password1').val();
         user.phoneNumber = $('#phoneNumber').val();
         user.email = $('#email').val();
 
